Updated configure and CMake files
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@22131 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -59,6 +59,7 @@ nobase_include_HEADERS =  \
 	yat/threading/MessageQ.h \
 	yat/threading/MessageQ.i \
 	yat/threading/Mutex.h \
+	yat/threading/Pulser.h \
 	yat/threading/Semaphore.h \
 	yat/threading/SharedObject.h \
 	yat/threading/SharedObject.i \
