--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,11 +22,12 @@ libyat_la_SOURCES = \
 	threading/Message.cpp \
 	threading/MessageQ.cpp \
 	threading/SyncAccess.cpp \
+	threading/Pulser.cpp \
 	file/FileName.cpp \
 	file/PosixFileImpl.cpp \
 	memory/MemBuf.cpp \
-  	system/PosixSysUtilsImpl.cpp \
-  	time/Time.cpp \
+  system/PosixSysUtilsImpl.cpp \
+  time/Time.cpp \
 	utils/String.cpp \
 	utils/StringTemplate.cpp \
 	utils/StringTokenizer.cpp \
