--- a/msvc/9.0/YAT_Static.vcproj
+++ b/msvc/9.0/YAT_Static.vcproj
@@ -179,6 +179,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\src\plugin\PlugInUnix.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\src\plugin\PlugInWin32.cpp"
 					>
 				</File>
@@ -200,6 +204,10 @@
 				</File>
 				<File
 					RelativePath="..\..\src\threading\SharedObject.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\threading\SyncAccess.cpp"
 					>
 				</File>
 				<File
@@ -231,6 +239,70 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="time"
+				>
+				<File
+					RelativePath="..\..\src\time\Time.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="file"
+				>
+				<File
+					RelativePath="..\..\src\file\FileName.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\file\Win32FileImpl.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="memory"
+				>
+				<File
+					RelativePath="..\..\src\memory\MemBuf.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="system"
+				>
+				<File
+					RelativePath="..\..\src\system\Win32SysUtilsImpl.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="utils"
+				>
+				<File
+					RelativePath="..\..\src\utils\CommandLine.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\Logging.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\String.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\StringTemplate.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\StringTokenizer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\URI.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="include"
@@ -238,10 +310,6 @@
 			<Filter
 				Name="yat"
 				>
-				<File
-					RelativePath="..\..\include\yat\Any.h"
-					>
-				</File>
 				<File
 					RelativePath="..\..\include\yat\Callback.h"
 					>
@@ -259,19 +327,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\include\yat\DataBuffer.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\include\yat\Exception.h"
 					>
 				</File>
 				<File
 					RelativePath="..\..\include\yat\Exception.i"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\GenericContainer.h"
 					>
 				</File>
 				<File
@@ -283,19 +343,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\include\yat\NonCopyable.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\include\yat\Portability.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\include\yat\Timer.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\XString.h"
+					RelativePath="..\..\include\yat\TargetPlatform.h"
 					>
 				</File>
 				<Filter
@@ -358,14 +410,6 @@
 					Name="threading"
 					>
 					<File
-						RelativePath="..\..\include\yat\threading\Barrier.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\include\yat\threading\Barrier.i"
-						>
-					</File>
-					<File
 						RelativePath="..\..\include\yat\threading\Condition.h"
 						>
 					</File>
@@ -424,6 +468,30 @@
 					<Filter
 						Name="impl"
 						>
+						<File
+							RelativePath="..\..\include\yat\threading\impl\PosixConditionImpl.i"
+							>
+						</File>
+						<File
+							RelativePath="..\..\include\yat\threading\impl\PosixMutexImpl.i"
+							>
+						</File>
+						<File
+							RelativePath="..\..\include\yat\threading\impl\PosixSemaphoreImpl.i"
+							>
+						</File>
+						<File
+							RelativePath="..\..\include\yat\threading\impl\PosixThreadImpl.i"
+							>
+						</File>
+						<File
+							RelativePath="..\..\include\yat\threading\impl\PosixThreadingImpl.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\include\yat\threading\impl\PosixThreadingImpl.i"
+							>
+						</File>
 						<File
 							RelativePath="..\..\include\yat\threading\impl\WinNtConditionImpl.i"
 							>
@@ -503,6 +571,122 @@
 					</File>
 					<File
 						RelativePath="..\..\include\yat\memory\DataBuffer.tpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\memory\MemBuf.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\memory\Memory.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\memory\SharedPtr.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="any"
+					>
+					<File
+						RelativePath="..\..\include\yat\any\Any.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\any\GenericContainer.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="file"
+					>
+					<File
+						RelativePath="..\..\include\yat\file\File.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\file\FileName.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="system"
+					>
+					<File
+						RelativePath="..\..\include\yat\system\System.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\system\SysUtils.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="time"
+					>
+					<File
+						RelativePath="..\..\include\yat\time\Time.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\Timer.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="utils"
+					>
+					<File
+						RelativePath="..\..\include\yat\utils\Callback.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\CommandLine.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\Logging.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\NonCopyable.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\ReferenceCounter.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\Signal.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\Singleton.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\String.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\StringTemplate.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\StringTokenizer.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\URI.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\Utils.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\XString.h"
 						>
 					</File>
 				</Filter>
