Applied koep's patch (KIT) - mantis #25477
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@22821 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,20 @@ project (yat)
 cmake_minimum_required (VERSION 2.6)
 
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
-set(VERSION "1.7.11")
+set(VERSION "1.7.13")
 
-if (lib_dir)
-  set(LIB_INSTALL_DIR ${lib_dir})
+# check for 64 bit
+if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+  set(LIB_INSTALL_DIR "lib64")
 else()
-  set(LIB_INSTALL_DIR "lib${LIB_SUFFIX}") 
-endif()  
+  set(LIB_INSTALL_DIR "lib")
+endif()
 
 if (UNIX)
-	add_definitions(-ansi -Wall -Wextra -Werror)
+  add_definitions(-std=c++0x -Wall -Wextra)
 endif()
 
 add_subdirectory (src)
-#add_subdirectory (test)
 
 set(prefix ${CMAKE_INSTALL_PREFIX})
 if (UNIX)
