--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -16,20 +16,13 @@ nobase_include_HEADERS =  \
 	yat/bitsstream/Endianness.h \
 	yat/file/FileName.h \
 	yat/memory/Allocator.h \
-	yat/memory/Allocator.i \
-	yat/memory/Allocator.tpp \
 	yat/memory/DataBuffer.h \
-	yat/memory/DataBuffer.i \
-	yat/memory/DataBuffer.tpp \
 	yat/memory/SharedPtr.h \
 	yat/memory/MemBuf.h \
 	yat/network/Address.h \
-	yat/network/Address.i \
 	yat/network/ClientSocket.h \
-	yat/network/ClientSocket.i \
 	yat/network/SocketException.h \
 	yat/network/Socket.h \
-	yat/network/Socket.i \
 	yat/plugin/IPlugInFactory.h \
 	yat/plugin/IPlugInInfo.h \
 	yat/plugin/IPlugInObject.h \
@@ -40,44 +33,31 @@ nobase_include_HEADERS =  \
 	yat/plugin/PlugInTypes.h \
 	yat/system/SysUtils.h \
 	yat/threading/Barrier.h \
-	yat/threading/Barrier.i \
 	yat/threading/Condition.h \
-	yat/threading/impl/PosixConditionImpl.i \
-	yat/threading/impl/PosixMutexImpl.i \
-	yat/threading/impl/PosixSemaphoreImpl.i \
-	yat/threading/impl/PosixThreadImpl.i \
-	yat/threading/impl/PosixThreadingImpl.h \
-	yat/threading/impl/PosixThreadingImpl.i \
-	yat/threading/impl/WinNtConditionImpl.i \
-	yat/threading/impl/WinNtMutexImpl.i \
-	yat/threading/impl/WinNtSemaphoreImpl.i \
-	yat/threading/impl/WinNtThreadImpl.i \
-	yat/threading/impl/WinNtThreadingImpl.h \
 	yat/threading/Implementation.h \
 	yat/threading/Message.h \
-	yat/threading/Message.i \
 	yat/threading/MessageQ.h \
-	yat/threading/MessageQ.i \
 	yat/threading/Mutex.h \
+	yat/threading/ReadersWriterMutex.h \
 	yat/threading/Pulser.h \
 	yat/threading/Semaphore.h \
 	yat/threading/SharedObject.h \
-	yat/threading/SharedObject.i \
 	yat/threading/Task.h \
-	yat/threading/Task.i \
 	yat/threading/Thread.h \
 	yat/threading/Utilities.h \
 	yat/threading/SyncAccess.h \
 	yat/time/Timer.h \
 	yat/time/Time.h \
 	yat/utils/Callback.h \
+	yat/utils/CommandLine.h \
+	yat/utils/Logging.h \
 	yat/utils/NonCopyable.h \
-	yat/utils/XString.h \
+	yat/utils/ReferenceCounter.h \ \
 	yat/utils/Signal.h \
 	yat/utils/Singleton.h \
-	yat/utils/StringTokenizer.h \
 	yat/utils/String.h \
 	yat/utils/StringTemplate.h \
+	yat/utils/StringTokenizer.h \
 	yat/utils/URI.h \
-	yat/utils/ReferenceCounter.h \
-	yat/utils/Logging.h
+	yat/utils/XString.h
+	
