--- a/yat.pc.in
+++ b/yat.pc.in
@@ -4,7 +4,7 @@ libdir=${exec_prefix}/lib
 includedir=${prefix}/include
 
 Name: yat
-Description: yat library from the Soleil synchrotron
+Description: yat library from the SOLEIL Synchrotron
 Version: @VERSION@
 Libs: -L${libdir} -lyat
 Cflags: -I${includedir}
