--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>fr.soleil.lib</groupId>
   <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-  <version>1.7.20</version>
+  <version>1.8.0-SNAPSHOT</version>
   <packaging>nar</packaging>
   <name>YAT</name>
   <description>Yet Another Toolkit Library</description>
@@ -34,6 +34,13 @@
   </scm>
   <build>
     <plugins>
+      <!--plugin>
+          <groupId>fr.soleil.maven.plugins</groupId>
+          <artifactId>maven-check-plugin</artifactId>
+          <configuration>
+            <enable>false</enable>
+          </configuration>
+      </plugin-->
       <plugin>
         <groupId>org.freehep</groupId>
         <artifactId>freehep-nar-plugin</artifactId>
@@ -97,7 +104,9 @@
                   <exclude>**/*Win32*.cpp</exclude>
                   <exclude>**/*Work*.cpp</exclude>
                 </excludes>
-                <options></options>
+                <options>
+                  <option>-std=c++0x</option>
+                </options>
               </cpp>
             </specificConfiguration>
             <specificConfiguration>
@@ -111,6 +120,9 @@
                   <exclude>**/*Win32*.cpp</exclude>
                   <exclude>**/*Work*.cpp</exclude>
                 </excludes>
+                <options>
+                  <option>-std=c++0x</option>
+                </options>
               </cpp>
             </specificConfiguration>
           </specificConfigurations>
