--- a/samples/memory/uniqueptr/pom.xml
+++ b/samples/memory/uniqueptr/pom.xml
@@ -3,22 +3,33 @@
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>fr.soleil</groupId>
-       <artifactId>super-pom-C-CPP-device</artifactId>
+       <artifactId>super-pom-C-CPP</artifactId>
        <version>RELEASE</version>
    </parent>
    <groupId>fr.soleil.device</groupId>
-   <artifactId>yat-sharedptr-${aol}-${mode}</artifactId>
+   <artifactId>yat-uniqueptr-${aol}-${mode}</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>nar</packaging>
-   <name>SharedPtrTester</name>
-   <description>a yat::SharedPtr test</description>
+   <name>UniquedPtrTester</name>
+   <description>a yat::UniquePtr test</description>
    <build>
        <plugins>
            <plugin>
                <groupId>org.freehep</groupId>
                <artifactId>freehep-nar-plugin</artifactId>
                   <configuration>
+                    <output>${project.name}</output>
+                    <libraries>
+                        <library>
+                            <type>executable</type>
+                            <run>false</run>
+                            <args>
+                                <arg>1</arg>
+                            </args>
+                        </library>
+                    </libraries>
                     <cpp>
+                        <sourceDirectory>src</sourceDirectory>
                         <defines>
                           <define>VERSION=${project.version}</define>
                         </defines>
@@ -44,18 +55,18 @@
        <dependency>
            <groupId>fr.soleil.lib</groupId>
            <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-           <version>1.7.15-SNAPSHOT</version>
+           <version>1.8.6-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <developers>
        <developer>
-           <id>leclercq</id>
-           <name>leclercq</name>
+           <id>poirier</id>
+           <name>poirier</name>
            <url>http://controle/</url>
            <organization>Synchrotron Soleil</organization>
            <organizationUrl>http://www.synchrotron-soleil.fr</organizationUrl>
            <roles>
-               <role>manager</role>
+               <role>developer</role>
            </roles>
            <timezone>1</timezone>
        </developer>
