--- a/msvc/10.0/YAT_Shared.vcxproj
+++ b/msvc/10.0/YAT_Shared.vcxproj
@@ -241,12 +241,6 @@
     <ClCompile Include="..\..\src\memory\MemBuf.cpp" />
     <ClCompile Include="..\..\src\plugin\PlugIn.cpp" />
     <ClCompile Include="..\..\src\plugin\PlugInManager.cpp" />
-    <ClCompile Include="..\..\src\plugin\PlugInUnix.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="..\..\src\plugin\PlugInWin32.cpp" />
     <ClCompile Include="..\..\src\system\Win32SysUtilsImpl.cpp" />
     <ClCompile Include="..\..\src\threading\Barrier.cpp" />
@@ -273,8 +267,6 @@
     <ClInclude Include="..\..\include\yat\bitsstream\BitsStream.h" />
     <ClInclude Include="..\..\include\yat\bitsstream\Endianness.h" />
     <ClInclude Include="..\..\include\yat\CommonHeader.h" />
-    <ClInclude Include="..\..\include\yat\config-linux.h" />
-    <ClInclude Include="..\..\include\yat\config-macosx.h" />
     <ClInclude Include="..\..\include\yat\config-win32.h" />
     <ClInclude Include="..\..\include\yat\Exception.h" />
     <ClInclude Include="..\..\include\yat\file\FileName.h" />
@@ -284,6 +276,7 @@
     <ClInclude Include="..\..\include\yat\memory\DataBuffer.h" />
     <ClInclude Include="..\..\include\yat\memory\MemBuf.h" />
     <ClInclude Include="..\..\include\yat\memory\SharedPtr.h" />
+    <ClInclude Include="..\..\include\yat\memory\UniquePtr.h" />
     <ClInclude Include="..\..\include\yat\network\Address.h" />
     <ClInclude Include="..\..\include\yat\network\ClientSocket.h" />
     <ClInclude Include="..\..\include\yat\network\Socket.h" />
@@ -327,9 +320,6 @@
     <ClInclude Include="..\..\include\yat\utils\XString.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\include\yat\bitsstream\Endianness.i">
-      <FileType>Document</FileType>
-    </None>
     <None Include="..\..\include\yat\Exception.i">
       <FileType>Document</FileType>
     </None>
