Hide compilation warnings
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@26409 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,8 @@
                 </excludes>
                 <options>
                   <option>-std=c++0x</option>
+                  <option>-Wstrict-aliasing</option>
+                  <option>-Wno-unused-result</option>
                 </options>
               </cpp>
             </specificConfiguration>
