Better threading.Pulser impl.
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@26549 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/samples/pulser/pom.xml
+++ b/samples/pulser/pom.xml
@@ -41,7 +41,7 @@
        <dependency>
            <groupId>fr.soleil.lib</groupId>
            <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-           <version>1.7.12-SNAPSHOT</version>
+           <version>1.9.2</version>
        </dependency>
    </dependencies>
    <developers>
