--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -14,6 +14,7 @@ nobase_include_HEADERS =  \
 	yat/bitsstream/BitsRecord.h \
 	yat/bitsstream/BitsStream.h \
 	yat/bitsstream/Endianness.h \
+	yat/file/File.h \
 	yat/file/FileName.h \
 	yat/memory/Allocator.h \
 	yat/memory/DataBuffer.h \
@@ -36,31 +37,18 @@ nobase_include_HEADERS =  \
 	yat/threading/Condition.h \
 	yat/threading/Implementation.h \
 	yat/threading/Message.h \
-	yat/threading/Message.i \
 	yat/threading/MessageQ.h \
-	yat/threading/MessageQ.i \
 	yat/threading/Mutex.h \
 	yat/threading/ReadersWriterMutex.h \
 	yat/threading/Pulser.h \
 	yat/threading/Semaphore.h \
 	yat/threading/SharedObject.h \
-	yat/threading/SharedObject.i \
 	yat/threading/Task.h \
 	yat/threading/Task.i \
 	yat/threading/Thread.h \
 	yat/threading/Utilities.h \
 	yat/threading/SyncAccess.h \
-	yat/threading/impl/PosixConditionImpl.i \
-	yat/threading/impl/PosixSemaphoreImpl.i \
-	yat/threading/impl/PosixThreadingImpl.h  \
-	yat/threading/impl/WinNtConditionImpl.i \
-	yat/threading/impl/WinNtSemaphoreImpl.i \
-	yat/threading/impl/WinNtThreadingImpl.h \
-	yat/threading/impl/PosixMutexImpl.i \
-	yat/threading/impl/PosixThreadImpl.i \
-	yat/threading/impl/PosixThreadingImpl.i \
-	yat/threading/impl/WinNtMutexImpl.i \
-	yat/threading/impl/WinNtThreadImpl.i \
+	yat/threading/impl/PosixThreadingImpl.h \
 	yat/time/Timer.h \
 	yat/time/Time.h \
 	yat/utils/Callback.h \
@@ -68,10 +56,12 @@ nobase_include_HEADERS =  \
 	yat/utils/Logging.h \
 	yat/utils/NonCopyable.h \
 	yat/utils/ReferenceCounter.h \
+	yat/utils/Signal.h \
 	yat/utils/Singleton.h \
 	yat/utils/String.h \
 	yat/utils/StringTemplate.h \
 	yat/utils/StringTokenizer.h \
 	yat/utils/URI.h \
-	yat/utils/XString.h
+	yat/utils/XString.h 
+	
 	
