Fixed bad formatted url in pom.xml file (i.e. no more warning from check-release plugin)
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@28016 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>fr.soleil.lib</groupId>
   <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-  <version>1.9.13-SNAPSHOT</version>
+  <version>1.9.14-SNAPSHOT</version>
   <packaging>nar</packaging>
   <name>YAT</name>
   <description>Yet Another Toolkit Library</description>
@@ -28,8 +28,8 @@
     </developer>
   </developers>
   <scm>
-    <connection>${scm.connection.svn.tango-cs}:share/yat/trunk</connection>
-    <developerConnection>${scm.developerConnection.cvs.svn.tango-cs}:share/yat/trunk</developerConnection>
+    <connection>${scm.connection.svn.tango-cs}/share/yat/trunk</connection>
+    <developerConnection>${scm.developerConnection.svn.tango-cs}/share/yat/trunk</developerConnection>
     <url>${scm.url.svn.tango-cs}/share/yat/trunk</url>
   </scm>
   <build>
