Added project name and version
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@28036 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
             <includePaths>
               <includePath>include</includePath>
             </includePaths>
+            <defines>
+              <define>YAT_PROJECT_VERSION="${project.version}"</define>
+              <define>YAT_PROJECT_NAME="${project.name}"</define>
+            </defines>
           </cpp>
           <specificConfigurations>
             <specificConfiguration>
