--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>fr.soleil.lib</groupId>
   <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-  <version>1.10.1-SNAPSHOT</version>
+  <version>1.10.1</version>
   <packaging>nar</packaging>
   <name>YAT</name>
   <description>Yet Another Toolkit Library</description>
@@ -51,8 +51,8 @@
               <includePath>include</includePath>
             </includePaths>
             <defines>
-              <define>YAT_PROJECT_VERSION="${project.version}"</define>
-              <define>YAT_PROJECT_NAME="${project.name}"</define>
+              <define>YAT_PROJECT_VERSION=${project.version}</define>
+              <define>YAT_PROJECT_NAME=${project.name}</define>
             </defines>
           </cpp>
           <specificConfigurations>
