--- a/samples/task/pom.xml
+++ b/samples/task/pom.xml
@@ -41,7 +41,7 @@
        <dependency>
            <groupId>fr.soleil.lib</groupId>
            <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-           <version>1.7.2</version>
+           <version>1.10.2-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <developers>
